<resources>
    <string name="app_name">Assignment2</string>

    <string name="name">Name</string>
    <string name="nameField"></string>
    <string name="save">Save</string>
    <string name="switch1">Timer Act</string>
    <string name="height">Height in meter</string>
    <string name="heightField"></string>
    <string name="weight">Weight</string>
    <string name="weightField"></string>
    <string name="gender">Gender</string>
    <string name="genderField"></string>
    <string name="bmi">BMI</string>
    <string name="bmiField"></string>
    <string name="set_timer">Set Timer</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="switch2">Switch2</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
</resources>