<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<GridLayout
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:paddingTop="20dp">
    <![CDATA[ xmlns:android="http://schemas.android.com/apk/res/android" />
    ]]>

    <TextView
        style="@style/TimerTextViewStyle"
        android:layout_row="0"
        android:layout_column="1"
        android:text="@string/hours"></TextView>

    <TextView
      style="@style/TimerTextViewStyle"
        android:layout_row="0"
        android:layout_column="2"
        android:text="@string/minutes"></TextView>

    <TextView
        style="@style/TimerTextViewStyle"
        android:layout_row="0"
        android:layout_column="3"
        android:text="@string/seconds"></TextView>

    <TextView
        android:layout_width="99dp"
        android:layout_height="60dp"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/set_timer"
        android:textAlignment="center"></TextView>

    <Spinner
        android:id="@+id/shours"
        style="@style/SpinnerStyle"
        android:layout_row="1"
        android:layout_column="1"
 />

    <Spinner
        android:id="@+id/sminutes"
        style="@style/SpinnerStyle"
        ></Spinner>

    <Spinner
        android:id="@+id/sseconds"
        style="@style/SpinnerStyle"
        android:layout_row="1"
        android:layout_column="3"></Spinner>
</GridLayout>


<TableRow
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:gravity="center">
        <TextView
            android:id="@+id/txtView"
            android:layout_width="375dp"
            android:layout_height="148dp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="Set Timer"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textSize="56sp"

            ></TextView>
</TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center"
        android:layout_marginTop="350dp"
        >

        <Button
            android:id="@+id/btnStart"
            style="@style/BStyle"
            android:onClick="onClickStart"
            android:text="Start" />

        <Button
            android:id="@+id/btnStop"
            style="@style/BStyle"
            android:onClick="onClickPause"
            android:text="@string/pause" />

        <Button
            android:id="@+id/btnReset"
            style="@style/BStyle"
            android:onClick="onClickStop"
            android:text="@string/stop" />
    </TableRow>


</RelativeLayout>