<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
android:layout_marginTop="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:orientation="vertical"
        android:text="Please enter these informations about you"
        android:textSize="20dp"
 />

    <TableRow
        android:id="@+id/row1"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignBottom="@+id/welcome"
        android:layout_marginBottom="-86dp">

        <TextView
            android:id="@+id/namelabel"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"

            android:text="@string/name"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/namee"
            android:layout_width="242dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:paddingLeft="40dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
          android:textAlignment="center"
            android:text="@string/nameField" />
    </TableRow>
    <TableRow
        android:id="@+id/row2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignBottom="@+id/row1"
        android:layout_marginBottom="-86dp">

        <TextView
            android:id="@+id/heightlabel1"
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:text="@string/height"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20dp" />

            <EditText
                android:id="@+id/height"
                android:layout_width="242dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:textAlignment="center"
                android:text="@string/heightField"  />


    </TableRow>
    <TableRow
        android:id="@+id/row3"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignBottom="@+id/row2"
        android:layout_marginBottom="-86dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:text="@string/weight"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/weightTextEdit"
            android:layout_width="242dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:paddingLeft="40dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:text="@string/weightField"
            android:textAlignment="center" />
    </TableRow>
    <TableRow
        android:id="@+id/row4"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignBottom="@+id/row3"
        android:layout_marginBottom="-86dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:text="@string/gender"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="20dp" />

        <Spinner
            android:id="@+id/genderSpinner"
            android:layout_width="149dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
           ></Spinner>
    </TableRow>
    <TableRow
        android:id="@+id/row5"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignBottom="@+id/row4"
        android:layout_marginBottom="-86dp"
        android:gravity="center">
        <Button
                android:id="@+id/bsavee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:onClick="onClick"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/save"
                tools:layout_editor_absoluteX="175dp"
                tools:layout_editor_absoluteY="168dp" />
            <Button
                android:id="@+id/bswitchh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:onClick="onClick2"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/switch1"
                tools:layout_editor_absoluteX="175dp"
                tools:layout_editor_absoluteY="168dp" />
        <Button
            android:id="@+id/bswitchh2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:onClick="onClick3"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/switch2"
            tools:layout_editor_absoluteX="175dp"
            tools:layout_editor_absoluteY="168dp" />
    </TableRow>
    <TableRow
        android:id="@+id/row6"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignBottom="@+id/row5"
        android:layout_marginBottom="-86dp"
>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/bmi"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/BMITextEdit"
                    android:layout_width="242dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="15dp"
                    android:paddingLeft="40dp"
                    android:paddingTop="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/bmiField"
                    android:textAlignment="center" />
    </TableRow>
</RelativeLayout>